--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,9 +1,15 @@
 akka {
-  log-dead-letters = off
-  log-dead-letters-during-shutdown = off
-  fork-join-executor {
-    parallelism-factor = 3.0
-    parallelism-min = 8
-    parallelism-max = 32
+  loglevel = DEBUG
+}
+
+http {
+  interface = "0.0.0.0"
+  port = 9000
+}
+
+services {
+  ip-api {
+    host = "ip-api.com"
+    port = 80
   }
 }
